<?xml version="1.0"?>
<package format="3">
  <name>robot_arm_description</name>
  <version>0.0.0</version>
  <description>
    URDF Description package for Tom's Robot Arm
  </description>

  <maintainer email="tomstewart3107@gmail.com">Tom Stewart</maintainer>

  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
